<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_inventory">

    <!-- LoginFragment -->
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.jeremiah_boothe_final.model.user.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >

        <!-- Define the action to navigate to HomeFragment upon successful login -->
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <!-- HomeFragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jeremiah_boothe_final.model.inventory.InventoryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_inventory" />

    <!-- InventoryItemFragment -->
    <fragment
        android:id="@+id/navigation_inventory_item"
        android:name="com.example.jeremiah_boothe_final.model.inventory.InventoryItemFragment"
        android:label="@string/title_inventory_item"
        tools:layout="@layout/fragment_inventory_item" />

    <!-- InventoryFragment -->
    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.jeremiah_boothe_final.model.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <!-- NotificationsFragment -->
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.jeremiah_boothe_final.model.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <!-- AddItemFragment -->
    <fragment
        android:id="@+id/navigation_add_item"
        android:name="com.example.jeremiah_boothe_final.model.inventory.AddItemFragment"
        android:label="@string/title_add_item"
        tools:layout="@layout/fragment_add_item" />

    <!-- Define actions between fragments -->
    <action
        android:id="@+id/action_inventory_to_inventory_item"
        app:destination="@id/navigation_inventory_item" />

</navigation>