<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_itemName"
        android:autofillHints=""
        android:hint="@string/item_description_hint"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <EditText
        android:id="@+id/editText_itemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_itemDescription"
        android:autofillHints=""
        android:hint="Quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:minLines="3" />

    <Button
        android:id="@+id/button_addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_itemQuantity"
        android:text="@string/add_item_button_label" />
</RelativeLayout>
